apps/monitoring-ingress/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.pedrocoutinho.eu`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: traefik
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls:
    secretName: homelab-wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.pedrocoutinho.eu`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: traefik
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
  tls:
    secretName: homelab-wildcard-tls
